# FieldConv

./: .gitmodules  README.md  classification.ipynb  correspondence.ipynb  dense_correspondence.ipynb  feature_matching.ipynb  segmentation.ipynb  shape_classification.ipynb
datasets/: FAUSTRM.py  SHAPESEG.py  (+5 more)
fcutils/: CMakeLists.txt  setup.py
fcutils/src/: main.cpp
trimesh/: CMakeLists.txt  setup.py
trimesh/include/Misha/: Array.h  BMP.h  BMP.inl  CmdLineParser.h  CmdLineParser.inl  FEM.h  FEM.inl  FileTricks.h  Geometry.h  Geometry.inl  GetDescriptor.inl  Image.h  JPEG.h  JPEG.inl  Miscellany.h  PBM.h  PBM.inl  PNG.h  PNG.inl  PNG_V0.inl  Ply.h  Ply.inl  PlyFile.h  PlyFile.inl  PlyVertexData.h  PlyVertexData.inl  Polynomial.h  Polynomial.inl  RegularGrid.h  RegularGrid.inl  RightTriangleQuadrature.h  Solver.h  SparseMatrix.inl  SparseMatrixInterface.h  SparseMatrixInterface.inl  Spectrum.h  TriMesh.h  TriMesh.inl  triangle.cpp  triangle.h  (+1 more)
trimesh/include/Spectra/: GenEigsBase.h  GenEigsComplexShiftSolver.h  GenEigsRealShiftSolver.h  GenEigsSolver.h  SymEigsBase.h  SymEigsShiftSolver.h  SymEigsSolver.h
trimesh/include/Spectra/LinAlg/: BKLDLT.h  UpperHessenbergEigen.h
trimesh/include/Spectra/MatOp/: DenseGenComplexShiftSolve.h  DenseGenMatProd.h  DenseGenRealShiftSolve.h  DenseSymShiftSolve.h  SparseGenRealShiftSolve.h
trimesh/include/Spectra/contrib/: LOBPCGSolver.h  PartialSVDSolver.h
trimesh/include/geometry-central/include/geometrycentral/utilities/: vector3.ipp
trimesh/include/libigl/include/igl/: active_set.cpp  arap.cpp  arap_dof.cpp  arap_linear_block.cpp  bfs_orient.cpp  cat.cpp  cotmatrix.cpp  cotmatrix_entries.cpp  cotmatrix_intrinsic.cpp  dihedral_angles.cpp  exact_geodesic.cpp  face_areas.cpp  is_edge_manifold.cpp  is_symmetric.cpp  massmatrix.cpp  massmatrix_intrinsic.cpp  min_quad_with_fixed.cpp  orientable_patches.cpp  per_face_normals.cpp  ply.h  triangle_triangle_adjacency.cpp  unique_edge_map.cpp  vertex_components.cpp
trimesh/include/libigl/include/igl/embree/: reorient_facets_raycast.cpp
trimesh/include/libigl/tutorial/403_BoundedBiharmonicWeights/: main.cpp
trimesh/include/libigl/tutorial/405_AsRigidAsPossible/: main.cpp
trimesh/src/: main.cpp
(+28 files in other folders)
